--- a/Client/Styles/styles.css
+++ b/Client/Styles/styles.css
@@ -6,4 +6,17 @@
   margin-top: 30px;
 }
 
+.allStarred {
+  width: 50%;
+  margin: auto;
+  /*border: 2px solid black;*/
+}
 
+.mymeetups {
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.eventName {
+  font-weight: bold;
+}
