--- a/Client/Styles/styles.css
+++ b/Client/Styles/styles.css
@@ -1,20 +1,31 @@
 
+body {
+  background: linear-gradient(rgba(0, 0, 0, .2), rgba(0, 0, 0, .2)), url('devmeetup.jpg') no-repeat center center fixed;
+  background-size: cover;
+}
+
 .header {
   margin: auto;
   width: 80%;
   text-align: center;
   margin-top: 30px;
+  margin-bottom: 40px;
+  /*background: white;*/
+  color: white;
 }
 
 .allStarred {
-  width: 50%;
+  padding: 10px;
+  width: 30%;
   margin: auto;
-  /*border: 2px solid black;*/
+  background: white;
+  border-radius: 10px;
+  opacity: .9;
 }
 
 .mymeetups {
   text-align: center;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 
 .eventName {
