fixed some bugs and styling

--- a/Client/Styles/styles.css
+++ b/Client/Styles/styles.css
@@ -48,3 +48,17 @@ body {
   background-position: -22px 0;
 }
 
+.memberCheck {
+  color: white;
+}
+
+.link {
+  color: white;
+  text-decoration: underline;
+}
+
+
+
+
+
+
