--- a/Client/Styles/styles.css
+++ b/Client/Styles/styles.css
@@ -1,7 +1,8 @@
 
 body {
-  background: linear-gradient(rgba(0, 0, 0, .2), rgba(0, 0, 0, .2)), url('devmeetup.jpg') no-repeat center center fixed;
+  background: linear-gradient(rgba(0, 0, 0, .2), rgba(0, 0, 0, .2)), url('meetup.jpg') no-repeat center center fixed;
   background-size: cover;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .header {
@@ -57,7 +58,10 @@ body {
   text-decoration: underline;
 }
 
-
+label {
+  color: white;
+  font: ;
+}
 
 
 
